Added a modal to show and play videos

--- a/EYEBAB_VideoGallery/Resources/Views/Gallery.Index.de-DE.resx
+++ b/EYEBAB_VideoGallery/Resources/Views/Gallery.Index.de-DE.resx
@@ -138,6 +138,9 @@
   <data name="List view" xml:space="preserve">
     <value>Listenansicht</value>
   </data>
+  <data name="Luk" xml:space="preserve">
+    <value>Schließe</value>
+  </data>
   <data name="læsning" xml:space="preserve">
     <value>lesung</value>
   </data>
