--- a/EYEBAB_VideoGallery/Resources/Views/Gallery.Index.en-GB.resx
+++ b/EYEBAB_VideoGallery/Resources/Views/Gallery.Index.en-GB.resx
@@ -135,6 +135,9 @@
   <data name="koordination" xml:space="preserve">
     <value>coordination</value>
   </data>
+  <data name="Luk" xml:space="preserve">
+    <value>Close</value>
+  </data>
   <data name="læsning" xml:space="preserve">
     <value>reading</value>
   </data>
